--- a/src/app/pages/audiina/audiina.page.html
+++ b/src/app/pages/audiina/audiina.page.html
@@ -44,7 +44,7 @@
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <ion-card>
-        <ion-img src="assets/a1.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/AUDIFONOS BLUTU/a1.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Audífonos Bluetooth<br>morados</ion-card-title>
           <ion-card-content>
@@ -54,7 +54,7 @@
       </ion-card>
       <!--SEGUNDO PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/a2.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/AUDIFONOS BLUTU/a2.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Audífonos Bluetooth<br>negros</ion-card-title>
           <ion-card-content>
@@ -64,7 +64,7 @@
       </ion-card>
       <!--TERCER PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/a3.webp" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/AUDIFONOS BLUTU/a3.webp" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Audífonos Bluetooth<br>rojos</ion-card-title>
           <ion-card-content>
@@ -80,7 +80,7 @@
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <ion-card>
-        <ion-img src="assets/a4.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/AUDIFONOS BLUTU/a4.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Audífonos Bluetooth<br>azules</ion-card-title>
           <ion-card-content>
@@ -90,7 +90,7 @@
       </ion-card>
       <!--SEGUNDO PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/a5.webp" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/AUDIFONOS BLUTU/a5.webp" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Audífonos Bluetooth<br>blancos</ion-card-title>
           <ion-card-content>
@@ -100,7 +100,7 @@
       </ion-card>
       <!--TERCER PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/a6.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/AUDIFONOS BLUTU/a6.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Reloj Analógico negro <br>verdes</ion-card-title>
           <ion-card-content>
