--- a/src/app/pages/relojdig/relojdig.page.html
+++ b/src/app/pages/relojdig/relojdig.page.html
@@ -44,7 +44,7 @@
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <ion-card>
-        <ion-img src="assets/rd1.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/digitales/rd1.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Reloj Digital <br> verde</ion-card-title>
           <ion-card-content>
@@ -54,7 +54,7 @@
       </ion-card>
       <!--SEGUNDO PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/rd2.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/digitales/rd2.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Reloj Digital<br>negro con borde azul</ion-card-title>
           <ion-card-content>
@@ -64,7 +64,7 @@
       </ion-card>
       <!--TERCER PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/rd3.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/digitales/rd3.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Reloj Digital<br>negro</ion-card-title>
           <ion-card-content>
@@ -80,9 +80,9 @@
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <ion-card>
-        <ion-img src="assets/rd4.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/digitales/rd4.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Digital<br>Gris</ion-card-title>
+          <ion-card-title>Reloj Digital<br>rosado</ion-card-title>
           <ion-card-content>
             <p>$75.000</p>
           </ion-card-content>
@@ -90,7 +90,7 @@
       </ion-card>
       <!--SEGUNDO PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/rd5.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/digitales/rd5.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Reloj Digital<br>negro</ion-card-title>
           <ion-card-content>
@@ -100,7 +100,7 @@
       </ion-card>
       <!--TERCER PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/rd6.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/digitales/rd6.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Reloj Digital<br>negro con azul</ion-card-title>
           <ion-card-content>
