--- a/src/app/pages/reloj-ana/reloj-ana.page.html
+++ b/src/app/pages/reloj-ana/reloj-ana.page.html
@@ -44,7 +44,7 @@
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <ion-card>
-        <ion-img src="assets/r1.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/RELOJES ANALOGO/r1.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Reloj Analógico azul <br> metálico</ion-card-title>
           <ion-card-content>
@@ -54,7 +54,7 @@
       </ion-card>
       <!--SEGUNDO PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r2.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/RELOJES ANALOGO/r2.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Reloj Analógico azul <br> con toques verdes</ion-card-title>
           <ion-card-content>
@@ -64,7 +64,7 @@
       </ion-card>
       <!--TERCER PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r3.webp" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/RELOJES ANALOGO/r3.webp" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Reloj Analógico Negro <br>con toques azules</ion-card-title>
           <ion-card-content>
@@ -80,7 +80,7 @@
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <ion-card>
-        <ion-img src="assets/r4.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/RELOJES ANALOGO/r4.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
           <ion-card-title>Reloj Analógico negro <br> fondo azul</ion-card-title>
           <ion-card-content>
@@ -90,9 +90,9 @@
       </ion-card>
       <!--SEGUNDO PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r5.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/RELOJES ANALOGO/r5.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico negro <br> fondo azul</ion-card-title>
+          <ion-card-title>Reloj Analógico amarillo <br> fondo negro</ion-card-title>
           <ion-card-content>
             <p>$35.000</p>
           </ion-card-content>
@@ -100,9 +100,9 @@
       </ion-card>
       <!--TERCER PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r6.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/RELOJES ANALOGO/r6.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico negro <br> fondo azul</ion-card-title>
+          <ion-card-title>Reloj Analógico cafe <br> fondo azul</ion-card-title>
           <ion-card-content>
             <p>$55.000</p>
           </ion-card-content>
