--- a/src/app/pages/relojsma/relojsma.page.html
+++ b/src/app/pages/relojsma/relojsma.page.html
@@ -1,13 +1,113 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>relojsma</ion-title>
+    <!--Menu de la busqueda-->
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <!--El buscador-->
+    <ion-searchbar slot="end" animated="true" placeholder="Buscar"></ion-searchbar>
+    <!--este es el menu del usuario-->
+    <ion-chip id="popover-button" slot="end" size="90px">
+      <ion-avatar>
+        <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+      </ion-avatar>
+      <ion-label>Cuenta</ion-label>
+    </ion-chip>
+    <ion-popover trigger="popover-button" [dismissOnSelect]="true">
+      <ng-template>
+        <ion-content>
+          <ion-list>
+            <ion-item [button]="true" [detail]="false" [routerLink]="['/datos-personales']">Perfil</ion-item>
+            <ion-item [button]="true" [detail]="false" [routerLink]="['/']">Mis compras</ion-item>
+            <ion-item [button]="true" [detail]="false" [routerLink]="['/home']">Cerrar Sesión</ion-item>
+
+            <ion-popover trigger="nested-trigger" [dismissOnSelect]="true" side="end">
+              <ng-template>
+                <ion-content>
+                  <ion-list>
+                    <ion-item [button]="true" [detail]="false">Nested option</ion-item>
+                  </ion-list>
+                </ion-content>
+              </ng-template>
+            </ion-popover>
+          </ion-list>
+        </ion-content>
+      </ng-template>
+    </ion-popover>
   </ion-toolbar>
 </ion-header>
-
+<!--#############################################PRODUCTOS################################################-->
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">relojsma</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
+  <ion-grid>
+    <ion-title>Relojes Smartwatch</ion-title>
+    <!--PRIMER PRODUCTO-->
+    <ion-row>
+      <ion-card>
+        <ion-img src="assets/SMARTWATCH/rs2.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title>Reloj Smartwatch<br>negro</ion-card-title>
+          <ion-card-content>
+            <p>$22.000</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+      <!--SEGUNDO PRODUCTO-->
+      <ion-card>
+        <ion-img src="assets/SMARTWATCH/rs4.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title>Reloj Smartwatch<br>blanco</ion-card-title>
+          <ion-card-content>
+            <p>$105.000</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+      <!--TERCER PRODUCTO-->
+      <ion-card>
+        <ion-img src="assets/SMARTWATCH/rs4.webp" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title>Reloj Smartwatch<br>Azul</ion-card-title>
+          <ion-card-content>
+            <p>$50.000</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+    </ion-row>
+  </ion-grid>
+
+  <!--############################################SEGUNDA FILA###########################################-->
+  <ion-grid>
+    <!--PRIMER PRODUCTO-->
+    <ion-row>
+      <ion-card>
+        <ion-img src="assets/SMARTWATCH/rs5.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title>Reloj Smartwatch<br>anaranjado</ion-card-title>
+          <ion-card-content>
+            <p>$75.000</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+      <!--SEGUNDO PRODUCTO-->
+      <ion-card>
+        <ion-img src="assets/SMARTWATCH/rs6.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title>Reloj Smartwatch<br>morado</ion-card-title>
+          <ion-card-content>
+            <p>$35.000</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+      <!--TERCER PRODUCTO-->
+      <ion-card>
+        <ion-img src="assets/SMARTWATCH/rs6.webp" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title>Reloj Smartwatch<br>Gris</ion-card-title>
+          <ion-card-content>
+            <p>$55.000</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+    </ion-row>
+  </ion-grid>
 </ion-content>
