--- a/src/app/pages/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio-sesion/inicio-sesion.page.html
@@ -61,7 +61,7 @@
           </ion-item>
 
           <br>
-          <ion-button expand="full" [disabled]="!emailInput.valid || !passwordInput.valid" type="submit">Iniciar sesión</ion-button>
+          <ion-button [routerLink]="['/tienda']" expand="full" [disabled]="!emailInput.valid || !passwordInput.valid" type="submit">Iniciar sesión</ion-button>
 
           <p1 [routerLink]="['/registro']">¿Aún no tienes una cuenta? Regístrate aquí</p1>
         </form>
