--- a/src/app/pages/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio-sesion/inicio-sesion.page.html
@@ -45,7 +45,7 @@
         <form id="registration-form" (ngSubmit)="onLogin()">
           <ion-item>
             <ion-label position="floating">Correo electrónico:</ion-label>
-            <ion-input type="email" placeholder="juanito.perez@gmail.com" required
+            <ion-input type="email" placeholder="juanito.perez@gmail.com" (keydown)="onKeyDown($event)" required
                        [(ngModel)]="email" name="email" #emailInput="ngModel"
                        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
           </ion-item>
@@ -56,12 +56,13 @@
           <ion-item>
             <ion-label position="floating">Contraseña:</ion-label>
             <ion-input type="password" placeholder="********************" required [(ngModel)]="password" name="password"
-            #passwordInput="ngModel" minlength="3" maxlength="15"
-            pattern="^(?=.*\d)(?=.*[a-zA-Z])(?=.*[!@#$%^&*]).{3,15}$"></ion-input>
+              #passwordInput="ngModel" minlength="3" maxlength="15" (keydown)="onKeyDown($event)"
+              pattern="^(?=.*\d{0,})(?=.*[a-zA-Z])(?=.*[!@#$%^&*-_.,])(?!.*\s).{3,15}$"></ion-input>
           </ion-item>
+          
 
           <br>
-          <ion-button [routerLink]="['/tienda']" expand="full" [disabled]="!emailInput.valid || !passwordInput.valid" type="submit">Iniciar sesión</ion-button>
+          <ion-button [routerLink]="['/tienda']" (click)="validatePassword()" expand="full" [disabled]="!emailInput.valid || !passwordInput.valid" type="submit">Iniciar sesión</ion-button>
 
           <p1 [routerLink]="['/registro']">¿Aún no tienes una cuenta? Regístrate aquí</p1>
         </form>
