--- a/src/app/pages/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio-sesion/inicio-sesion.page.html
@@ -62,7 +62,7 @@
           
 
           <br>
-          <ion-button [routerLink]="['/tienda']" (click)="validatePassword()" expand="full" [disabled]="!emailInput.valid || !passwordInput.valid" type="submit">Iniciar sesión</ion-button>
+          <ion-button [routerLink]="['/tienda']"  expand="full" [disabled]="!emailInput.valid || !passwordInput.valid" type="submit">Iniciar sesión</ion-button>
 
           <p1 [routerLink]="['/registro']">¿Aún no tienes una cuenta? Regístrate aquí</p1>
         </form>
