--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -76,7 +76,8 @@
           <!--Validacion rut-->
           <ion-item>
             <ion-label position="floating">Ingrese su Rut</ion-label>
-            <ion-input type="text" name="rutU" minlength="11" maxlength="12" placeholder="11.111.111-1" required (keydown)="onKeyDown($event)" [(ngModel)]="rutUValue"
+            <ion-input type="text" name="rutU" minlength="11" maxlength="12" placeholder="11.111.111-1"
+             required (keydown)="onKeyDown($event)" [(ngModel)]="rutUValue"
               #rutUInput="ngModel"></ion-input>
           </ion-item>
           <div class="error-message" *ngIf="rutUInput.invalid && (rutUInput.dirty || rutUInput.touched)">
