--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -75,7 +75,7 @@
 
           <!--Validacion rut-->
           <ion-item>
-            <ion-label position="floating">Ingrese su Rut</ion-label>
+            <ion-label position="floating">Ingrese su Rut(seguir formato):</ion-label>
             <ion-input type="text" name="rutU" minlength="11" maxlength="12" placeholder="11.111.111-1"
              required (keydown)="onKeyDown($event)" [(ngModel)]="rutUValue"
               #rutUInput="ngModel"></ion-input>
